# mediaportal_api

./: .gitignore  Cargo.toml  Readme.md  api.toml  mediaportal.sql
src/: data.rs  main.rs  user.rs  utility.rs
src/other/: mod.rs  structs.rs  utility.rs
src/services/: data.rs  mod.rs  user.rs
