[package]
name = "mediaportal_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-easy-multipart = "2.1.1"
actix-cors = "0.6.3"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
lazy_static = "1.4.0"
toml = "0.5.9"

mysql = "22.2.0"

log = "0.4"
pretty_env_logger = "0.4.0"