[package]
name = "mediaportal_api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-easy-multipart = "3.0.0"
actix-cors = "0.6.4"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
lazy_static = "1.4.0"
toml = "0.5.9"

mysql = "22.2.0"

log = "0.4"
pretty_env_logger = "0.4.0"

checked_command = "0.2.4"
rand = "0.8.5"
pwhash = "1"
num_cpus = "1.14.0"
ctrlc = "3.2.3"
